Refactor models and service code to match SerpApi Google Flights API response structure